# TOLlm

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
benchmarks/: __init__.py  bench_throughput.py
examples/: minimal.py
scripts/: dev_setup.ps1
src/tollm/: __init__.py  config.py  llm.py  types.py
src/tollm/_vendor/: README.txt
src/tollm/cache/: __init__.py  kv.py
src/tollm/compat/nano/: __init__.py
src/tollm/core/: __init__.py  block.py  block_manager.py  scheduler.py  sequence.py
src/tollm/engine/: __init__.py  llm.py  llm_engine.py  runner.py
src/tollm/layers/: attention.py  embed_head.py
src/tollm/model/: __init__.py  base.py  llama.py  loader.py  qwen3.py
src/tollm/ops/attention/: __init__.py  flash.py  paged.py
src/tollm/ops/attention/backends/: __init__.py
src/tollm/optim/: __init__.py  graph.py
src/tollm/sampling/: __init__.py  logits.py
src/tollm/server/: __init__.py  http_stub.py
tests/: test_config.py
